// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wizard /> should render in horizontal mode with 3 steps 1`] = `
<div
  className="content row"
>
  <div
    className="horizontal col-sm-12"
  >
    <div
      className="pull-right"
    >
      <div
        className="horizontalPreviousNextButtons btn-toolbar"
        role="toolbar"
      >
        <button
          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-xs btn-info"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <i
            className="fa fa-caret-left"
          />
        </button>
        <button
          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-xs btn-info"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <i
            className="fa fa-caret-right"
          />
        </button>
      </div>
    </div>
    <ul
<<<<<<< HEAD
<<<<<<< HEAD
      className="Nav-dzawzr-0 jJbWWy nav nav-pills"
=======
      className="Nav-dzawzr-0 eiLPpa nav nav-pills"
>>>>>>> master
=======
      className="Nav-dzawzr-0 eiLPpa nav nav-pills"
>>>>>>> 13b93a394e81c89be722316e9cc306cd52c3fd91
      role={null}
    >
      <li
        className="active"
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          Title1
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          Title2
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          Title3
        </a>
      </li>
    </ul>
  </div>
  <div
    className="col-md-12"
  >
    <div>
      Component1
    </div>
  </div>
</div>
`;

exports[`<Wizard /> should render in horizontal mode with 3 steps and children 1`] = `
<div
  className="content row"
>
  <div
    className="horizontal col-sm-12"
  >
    <div
      className="pull-right"
    >
      <div
        className="horizontalPreviousNextButtons btn-toolbar"
        role="toolbar"
      >
        <button
          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-xs btn-info"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <i
            className="fa fa-caret-left"
          />
        </button>
        <button
          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-xs btn-info"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <i
            className="fa fa-caret-right"
          />
        </button>
      </div>
    </div>
    <ul
<<<<<<< HEAD
<<<<<<< HEAD
      className="Nav-dzawzr-0 jJbWWy nav nav-pills"
=======
      className="Nav-dzawzr-0 eiLPpa nav nav-pills"
>>>>>>> master
=======
      className="Nav-dzawzr-0 eiLPpa nav nav-pills"
>>>>>>> 13b93a394e81c89be722316e9cc306cd52c3fd91
      role={null}
    >
      <li
        className="active"
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          Title1
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          Title2
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          Title3
        </a>
      </li>
    </ul>
  </div>
  <div
    className="col-md-7"
  >
    <div>
      Component1
    </div>
  </div>
  <div
    className="col-md-5"
  >
    <span>
      Preview
    </span>
  </div>
</div>
`;

exports[`<Wizard /> should render with 3 steps 1`] = `
<div
  className="content row"
>
  <div
    className="subnavigation col-md-2"
  >
    <ul
<<<<<<< HEAD
<<<<<<< HEAD
      className="Nav-dzawzr-0 jJbWWy nav nav-pills nav-stacked"
=======
      className="Nav-dzawzr-0 eiLPpa nav nav-pills nav-stacked"
>>>>>>> master
=======
      className="Nav-dzawzr-0 eiLPpa nav nav-pills nav-stacked"
>>>>>>> 13b93a394e81c89be722316e9cc306cd52c3fd91
      role={null}
    >
      <li
        className="active"
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          Title1
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          Title2
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          Title3
        </a>
      </li>
    </ul>
    <br />
    <div
      className="row"
    >
      <div
        className="col-xs-6"
      >
        <button
          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-sm btn-info"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Previous
        </button>
      </div>
      <div
        className="text-right col-xs-6"
      >
        <button
          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-sm btn-info"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Next
        </button>
      </div>
    </div>
  </div>
  <div
    className="col-md-10"
  >
    <div>
      Component1
    </div>
  </div>
</div>
`;

exports[`<Wizard /> should render with 3 steps and children 1`] = `
<div
  className="content row"
>
  <div
    className="subnavigation col-md-2"
  >
    <ul
<<<<<<< HEAD
<<<<<<< HEAD
      className="Nav-dzawzr-0 jJbWWy nav nav-pills nav-stacked"
=======
      className="Nav-dzawzr-0 eiLPpa nav nav-pills nav-stacked"
>>>>>>> master
=======
      className="Nav-dzawzr-0 eiLPpa nav nav-pills nav-stacked"
>>>>>>> 13b93a394e81c89be722316e9cc306cd52c3fd91
      role={null}
    >
      <li
        className="active"
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          Title1
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          Title2
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          Title3
        </a>
      </li>
    </ul>
    <br />
    <div
      className="row"
    >
      <div
        className="col-xs-6"
      >
        <button
          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-sm btn-info"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Previous
        </button>
      </div>
      <div
        className="text-right col-xs-6"
      >
        <button
          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-sm btn-info"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Next
        </button>
      </div>
    </div>
  </div>
  <div
    className="col-md-7"
  >
    <div>
      Component1
    </div>
  </div>
  <div
    className="col-md-3"
  >
    <span>
      Preview
    </span>
  </div>
</div>
`;
